--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -8,6 +8,82 @@
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
 
+body {
+  padding-bottom: 40px;
+  color: #5a5a5a;
+}
+
+.form-signin {
+  max-width: 300px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  background-color: white;
+  border: 0px solid white;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+  box-shadow: 0 0px 0px rgba(0,0,0,.05);
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 0px;
+}
+.form-signin input[type="text"],
+.form-signin input[type="password"] {
+  font-size: 16px;
+  height: auto;
+  margin-bottom: 15px;
+  padding: 7px 9px;
+}
+
+/* Custom container */
+.hr-narrow {
+  margin: 0 auto;
+  max-width: 1180px;
+}
+.hr-narrow > hr {
+  margin: 30px 0;
+}
+
+.jumbotron {
+  margin: 30px 0;
+}
+.jumbotron h1 {
+  font-size: 40px;
+  line-height: 1;
+}
+.jumbotron h2 {
+  font-size: 24px;
+  line-height: 1;
+}
+.jumbotron .btn {
+  font-size: 21px;
+  padding: 10px 24px;
+}
+
+.center {
+  text-align: center;
+}
+
+.masthead {
+  padding: 15px 0px 0px 0px;
+}
+
+
+footer a {
+  color: #555;
+}  
+
+footer a:hover { 
+  color: #222;
+}
+
+footer {
+  padding-top: 20px; 
+}
+
 .clearfix {
   *zoom: 1;
 }
