--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+<!--
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
@@ -29,3 +30,33 @@
     </div>
   </div>
 </header>
+-->
+
+<header>
+  <div class ="container masthead">
+    <div class="navbar"> 
+      <div>
+        <ul class="nav pull-right">
+          <li class="active"><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Help", help_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li class="nav-header">Your Offers</li>
+              <li><%= link_to "Deals", current_user %></li>
+              <li><%= link_to "Offers", current_user %></li>
+              <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+              <li class="nav-header">Your Customers</li>
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <h3><a href="/" style="color: #777777">Around the Corner</a></h3>
+    </div>
+  </div>
+</header>
+<hr class="hr-narrow">
+
