--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <%= stylesheet_link_tag    "application", media: "all" %>
+
+
+    <link href="/assets/bootstrap.css" media: "all" rel="stylesheet">
+    <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= render 'layouts/shim' %>
@@ -15,7 +18,6 @@
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
-			<%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
