--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,26 @@
 <% provide(:title, 'About Us') %>
-<h1>About Us</h1>
-<p>
-  The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
-</p>
+<div class="container jumbotron">
+	<h1>About Us</h1>
+	<p class="lead"><br>Connect with your customers and the world around you on Around the Corner.<br></p>
+
+	<div class="container">
+	<section class="pull-left">
+		<h2>Charlie Fierro</h2>
+		<p class="lead">Cofounder</p>
+
+		<h2>Darin Im</h2>
+		<p class="lead">Cofounder</p>
+
+		<h2>Toan Tran</h2>
+		<p class="lead">Cofounder</p> 
+	</section>
+
+	<section class="pull-right">
+		<h2>Minh Thao Nguyen</h2>
+		<p class="lead">Cofounder</p>
+
+		<h2>Nadja Rhodes</h2>
+		<p class="lead">Cofounder</p>
+	</section>
+	</div>
+</div>
