--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'Contact') %>
-<h1>Contact</h1>
-<p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/contact">contact page</a>.
-</p>
+
+<div class="container jumbotron">
+	<h1>Contact us</h1>
+	<p class="lead"><br>For ongoing information about Around the Corner, please read our <a href="#">company blog</a>. Also, feel free to contact us with any questions at our <a href="mailto:cfierro@stanford.edu">company email.</a>
+	</p>
+</div>
+
