--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,39 +12,6 @@
     <%= csrf_meta_tags %>
     <link href="/assets/bootstrap.css" media: "all" rel="stylesheet">
     <link href="/assets/bootstrap-responsive.css" rel="stylesheet">
-    <style>
-
-    /* GLOBAL STYLES
-    -------------------------------------------------- */
-    /* Padding below the footer and lighter body text */
-
-    body {
-      padding-bottom: 40px;
-      color: #5a5a5a;
-    }
-
-    .masthead {
-      padding: 15px 0px 0px 0px;
-    }
-
-    .jumbotron {
-        margin: 30px 0;
-        text-align: center;
-      }
-    .jumbotron h1 {
-      font-size: 36px;
-      line-height: 1;
-    }
-    .jumbotron .btn {
-      font-size: 21px;
-      padding: 10px 24px;
-    }
-
-    .center {
-      text-align: center;
-    }
-
-    </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -52,57 +19,60 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
+
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
       <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
                     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
                                    <link rel="shortcut icon" href="../assets/ico/favicon.png">
+    
   </head>
 
   <body>
 
-    <div class="masthead">
-      <div class ="container">
+    <!-- Header -->
+    <div class ="container masthead">
+      <div class="navbar">
         <form class="navbar-form pull-right" method="link" action="/signin">
-              <input type="text" placeholder="Email">
-              <input type="password" placeholder="Password">
-              <button type="submit" class="btn">Sign in</button>
+          <input type="text" placeholder="Email">
+          <input type="password" placeholder="Password">
+          <button type="submit" class="btn">Sign in</button>
         </form>
-        <h4><a href="/" style="color: #777777">Around the Corner</a></h4>
+        <h3><a href="/" style="color: #777777">Around the Corner</a></h3>
       </div>
     </div>
+    <hr class="hr-narrow">
 
-    <hr>
-
+    <!-- Welcome -->
     <div class="container center">
       <div class="jumbotron">
           <h1>Welcome to Around the Corner</h1>
-          <img src="assets/logo_iphone.png" alt="logo", width="220" height="220">
+          <img src="/assets/logo_iphone.png" alt="logo", width="250" height="250">
           <p class="lead">Connect with your customers and the
           world around you on Around the Corner.</p>
           <a href="/signup" class="btn btn-primary">Sign up now!</a>
       </div>
     </div>
 
-    <hr>
+    <hr class="hr-narrow">
 
+    <!-- Messages -->
     <div class="container center">
-      <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="span4">
-        <img src="assets/deal_list.png" alt="Rails", width="350" height="350">
+        <img src="/assets/deal_list.png" alt="Rails", width="350" height="350">
           <h3>Offers & Deals</h3>
           <p>Keep and attract new customers with personalized and targeted offers.</p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!-- /.span4 -->
+        </div>
         <div class="span4">
-          <img src="assets/map.png" alt="Rails", width="350" height="350">
+          <img src="/assets/map.png" alt="Rails", width="350" height="350">
           <h3>Be Discovered</h3>
           <p>Users will be notified of your business when Around the Corner.</p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div><!-- /.span4 -->
+        </div>
         <div class="span4">
-          <img src="assets/specific_deal.png" alt="Rails", width="350" height="350">
+          <img src="/assets/specific_deal.png" alt="Rails", width="350" height="350">
           <h3>Keep Them in the Loop</h3>
           <p>Easily send updates, event invitations, news and reviews to your customers.</p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
@@ -111,9 +81,10 @@
 
       <hr>
 
+      <!-- Footer -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 Company, Inc. &middot; <%= link_to "About Us", about_path %> &middot; <%= link_to "Contact", contact_path %></p>
+        <p class="pull-left">&copy; 2013 Company, Inc. &middot; <%= link_to "About Us", about_path %> &middot; <%= link_to "Contact", contact_path %></p>
       </footer>
     </div>
 
