Fixed sign up error bug

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,6 +5,8 @@
     <div class="span6">
       <form accept-charset="UTF-8" action="/users" class="new_user form-signin" id="new_user" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="ciUWLuIlrDyJVuatqhrwopZidOBUn3XcW4oJaI+aZ5k=" /></div>
         <h1 class="center">Sign up</h1>
+        
+        <%= render 'shared/error_messages' %>
 
 
         <label for="user_name">Name</label>
@@ -32,6 +34,3 @@
       </div>
     </div>
   </div>
-
-
-
