Halfway through user-microposts

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,4 @@
 <% provide(:title, 'Sign up') %>
-
 <div class="container">
   <div class="row">
     <div class="span6">
@@ -23,14 +22,13 @@
 
         <input class="btn btn-large btn-primary center" name="commit" type="submit" value="Create Account" />
 
-        <p><br>Already a user? <%= link_to "Sign in now!", signin_path %>
-        </form>
-      </div>
-      <div class="span6 center">
-        <img src="/assets/logo_iphone.png" alt="logo", width="250" height="250">
-        <p class="lead">Connect with your customers and the
-          world around you on Around the Corner.</p>
-        </div>
-      </div>
+        <p><br>Already a user? <%= link_to "Sign in now!", signin_path %></p>
+      </form>
+    </div>
+    <div class="span6 center">
+      <img src="/assets/logo_iphone.png" alt="logo", width="250" height="250">
+      <p class="lead">Connect with your customers and the
+        world around you on Around the Corner.</p>
     </div>
   </div>
+</div>
